[package]
name = "imbl-value"
version = "0.2.0"
edition = "2021"
description = "A JSON `Value` type built on `imbl`"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
imbl = { version = "4", features = ["serde", "small-chunks"] }
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
treediff = { version = "5", optional = true }
yasi = "0.1"
