[package]
name = "imbl-value"
version = "0.3.2"
edition = "2021"
description = "A JSON `Value` type built on `imbl`"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
arbitrary = ["proptest", "proptest-derive", "imbl/proptest"]

[dependencies]
imbl = { version = "4", features = ["serde", "small-chunks"] }
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
yasi = "0.1"
proptest = { version = "1", optional = true }
proptest-derive = { version = "0.6", optional = true }
